--- a/twine/fair/index.html
+++ b/twine/fair/index.html
@@ -152,6 +152,11 @@ a:hover {background-color: pink; color: darkred; text-decoration: none;}
     .interview-suspects > div {flex: 0 0 calc(50% - 30px); margin-bottom: 30px; padding: 10px;}
   .interview-suspects img {width: 100%}
       
+    .suspect-notes {justify-content: flex-start;  flex-wrap: wrap;}
+  .suspect-notes > div {flex: 0 0 calc(50% - 30px); max-width: 200px;}
+  .suspect-notes a {padding: 0px;}
+  
+  
   #ui-bar.stowed~#story {
     margin-left: 3.5em;
     margin-right: 2.0em;
@@ -826,7 +831,7 @@ Now that politician &lt;b&gt;Paul&lt;/b&gt;? He is a camera magnet incarnate tha
 &lt;img src=&quot;https://www.mapsandlines.com/twine/fair/kenny.jpg&quot;&gt;
 &lt;/div&gt;
 &lt;div class=&quot;scene-content&quot;&gt;
-&lt;i&gt;The pigs?!&lt;/i&gt; I ain&#39;t sayin&#39; I got a criminal records, but I don&#39;t want no cops &#39;round here.
+&lt;i&gt;The pigs?!&lt;/i&gt; I ain&#39;t sayin&#39; I got a criminal record, but I don&#39;t want no cops &#39;round here.
 
 Oh, you mean the petting zoo. Yeah, those piglets is alright, ain&#39;t they? I feel a spiritual connection with them. We both eat slop, live in a sty, and sleep on the ground. It&#39;s a pretty sweet life, so I just let &#39;em be.
 
@@ -996,7 +1001,7 @@ The ring toss? I know the flattie that runs that joint, and I wouldn&#39;t drop 
 
 You can ask any of the carnie trash that works the midway, and they will &lt;b&gt;vouch for my innocence.&lt;/b&gt;
 
-Now that angry lady &lt;b&gt;Annie&lt;/b&gt; who hates everything? The agent might give her a prize just to get het stop yappin&#39; &#39;bout consumerism greed.  And &lt;b&gt;Fiona&lt;/b&gt;? I&#39;m guessin&#39; she could use her glass eye to figure out how to win that gaffed joint.
+Now that angry lady &lt;b&gt;Annie&lt;/b&gt; who hates everything? The agent might give her a prize just to get her stop yappin&#39; &#39;bout consumerism greed.  And &lt;b&gt;Fiona&lt;/b&gt;? I&#39;m guessin&#39; she could use her glass eye to figure out how to win that gaffed joint.
 
 &lt;&lt;KennyNav&gt;&gt;
 &lt;/div&gt;
@@ -1016,7 +1021,7 @@ All of the suspects had a motive. But:
 &lt;/ul&gt;
 [[Police Arrive]]
 &lt;/div&gt;
-&lt;/div&gt;</tw-passagedata><tw-passagedata pid="44" name="PassageHeader" tags="" position="100,500" size="100,100">&lt;div style=&quot;font-size: 12px; margin-top: 0px; width: 100%; color: #aaa; display: flex; justify-content: space-between;&quot;&gt;&lt;div&gt;$storyTitle&lt;/div&gt;&lt;div class=&quot;simple-link&quot;&gt;&lt;&lt;if !tags().includes(&quot;noProfilesLink&quot;)&gt;&gt;[[Review Suspect Notes]]&lt;&lt;/if&gt;&gt;&lt;/div&gt;&lt;/div&gt;&lt;hr style=&quot;margin-top: 5px; margin-bottom: 0px; border-top: 1px solid #aaa;&quot;&gt;</tw-passagedata><tw-passagedata pid="45" name="Review Suspect Notes" tags="" position="300,600" size="100,100">&lt;div class=&quot;page-title&quot;&gt;Suspect Notes&lt;/div&gt;
+&lt;/div&gt;</tw-passagedata><tw-passagedata pid="44" name="PassageHeader" tags="" position="100,500" size="100,100">&lt;div style=&quot;font-size: 12px; margin-top: 0px; width: 100%; color: #aaa; display: flex; justify-content: space-between;&quot;&gt;&lt;div&gt;$storyTitle&lt;/div&gt;&lt;div class=&quot;simple-link&quot;&gt;&lt;&lt;if !tags().includes(&quot;noProfilesLink&quot;)&gt;&gt;[[Review Suspect Notes]]&lt;&lt;/if&gt;&gt;&lt;/div&gt;&lt;/div&gt;&lt;hr style=&quot;margin-top: 5px; margin-bottom: 0px; border-top: 1px solid #aaa;&quot;&gt;</tw-passagedata><tw-passagedata pid="45" name="Review Suspect Notes" tags="noProfilesLink" position="300,600" size="100,100">&lt;div class=&quot;page-title&quot;&gt;Suspect Notes&lt;/div&gt;
 &lt;div class=&quot;suspect-notes&quot;&gt;
 &lt;div&gt;
 &lt;img src=&quot;https://www.mapsandlines.com/twine/fair/paul.jpg&quot;&gt;
@@ -1079,7 +1084,7 @@ All of the suspects had a motive. But:
 &lt;/div&gt;
 &lt;/div&gt;
 
-&lt;div style=&quot;text-align: center;&quot;&gt;&lt;&lt;back&gt;&gt;&lt;/div&gt;</tw-passagedata><tw-passagedata pid="46" name="PassageFooter" tags="" position="100,625" size="100,100">&lt;hr style=&quot;margin-top: 30px; margin-bottom: 0px; border-top: 1px solid #aaa;&quot;&gt;&lt;div style=&quot;font-size: 12px; margin-top: 5px; text-align: right; width: 100%; color: #aaa&quot;&gt;$storyTitle&lt;/div&gt;</tw-passagedata><tw-passagedata pid="47" name="Police Arrive" tags="" position="1400,2400" size="100,100">&lt;div class=&quot;scene&quot;&gt;
+&lt;div style=&quot;text-align: center;&quot;&gt;&lt;&lt;back&gt;&gt;&lt;/div&gt; </tw-passagedata><tw-passagedata pid="46" name="PassageFooter" tags="" position="100,625" size="100,100">&lt;hr style=&quot;margin-top: 30px; margin-bottom: 0px; border-top: 1px solid #aaa;&quot;&gt;&lt;div style=&quot;font-size: 12px; margin-top: 5px; text-align: right; width: 100%; color: #aaa&quot;&gt;$storyTitle&lt;/div&gt;</tw-passagedata><tw-passagedata pid="47" name="Police Arrive" tags="" position="1400,2400" size="100,100">&lt;div class=&quot;scene&quot;&gt;
 &lt;div class=&quot;scene-image&quot;&gt;
 &lt;img src=&quot;https://www.mapsandlines.com/twine/fair/police.jpg&quot;&gt;
 &lt;/div&gt;
