--- a/twine/poison/index.html
+++ b/twine/poison/index.html
@@ -551,7 +551,7 @@ But last night I was chatting with that fabulous baker &lt;b&gt;Art&lt;/b&gt;. H
     &lt;div class=&quot;scene-content&quot;&gt;
 Oh, this has been such a hoot! I can&#39;t believe I am part of a real-life murder mystery. Wait until I tell Drew Carey! It&#39;s just all so exciting. I wish I could make our time a true daily double, but I guess the tribe has spoken.
 
-I&#39;d better be skedaddling. I am playing cribbage tonight, and I always forget the rules. It&#39;s like, is it my turn to deal or no deal? Oh, and I am making a big, square pan of brownies for everyone at the table. Everyone in my circle gets the square.
+I&#39;d better be going. I am playing cribbage tonight, and I always forget the rules. It&#39;s like, is it my turn to deal or no deal? Oh, and I am making a big, square pan of brownies for everyone at the table. Everyone in my circle gets the square.
 
 I hope you have a fantabulous day, and that&#39;s my final answer. I&#39;m Gayle reminding you to help control the pet population. Have your pet spayed or neutered. Goodbye, everybody.
 
