--- a/twine/index.html
+++ b/twine/index.html
@@ -21,6 +21,7 @@
 <div class="twine-stories">
 	<div><a href="poison/index.html"><img src="poison/poster-square.jpg"><br>Poison at the Bagel Convention</a></div>
 	<div><a href="fair/index.html"><img src="fair/poster-square.jpg"><br>Sabotage at the State Fair</a></div>
+	<div><a href="karaoke/index.html"><img src="karaoke/story-poster-square.jpg"><br>Scandal at Karaoke Night</a></div>
 </div>
 
 </div></div>
