--- a/twine/karaoke/index.html
+++ b/twine/karaoke/index.html
@@ -176,7 +176,9 @@ a:hover {color: darkblue; background-color: lightblue; text-decoration: none;}
   
  .desktop-only {display: none;}
 .mobile-only {display: block;} 
-}</style><script role="script" id="twine-user-script" type="text/twine-javascript"></script><tw-tag name="widget" color="purple"></tw-tag><tw-tag name="noProfilesLink" color="red"></tw-tag><tw-passagedata pid="1" name="Start" tags="noProfilesLink" position="400,100" size="100,100">&lt;div style=&quot;text-align: center;&quot;&gt;&lt;img src=&quot;https://www.mapsandlines.com/twine/karaoke/story-poster.jpg&quot; style=&quot;margin: auto; width: 100%; max-width: 600px;&quot; class=&quot;desktop-only&quot;&gt;&lt;img src=&quot;https://www.mapsandlines.com/twine/karaoke/story-poster-square.jpg&quot; style=&quot;margin: auto; width: 100%; max-width: 600px;&quot; class=&quot;mobile-only&quot;&gt;&lt;/div&gt;
+}</style><script role="script" id="twine-user-script" type="text/twine-javascript">$(document).ready(function() {
+  $('head').append('<link rel="icon" href="https://www.mapsandlines.com/twine/karaoke/favicon-karaoke.png" type="image/png">');
+});</script><tw-tag name="widget" color="purple"></tw-tag><tw-tag name="noProfilesLink" color="red"></tw-tag><tw-passagedata pid="1" name="Start" tags="noProfilesLink" position="400,100" size="100,100">&lt;div style=&quot;text-align: center;&quot;&gt;&lt;img src=&quot;https://www.mapsandlines.com/twine/karaoke/story-poster.jpg&quot; style=&quot;margin: auto; width: 100%; max-width: 600px;&quot; class=&quot;desktop-only&quot;&gt;&lt;img src=&quot;https://www.mapsandlines.com/twine/karaoke/story-poster-square.jpg&quot; style=&quot;margin: auto; width: 100%; max-width: 600px;&quot; class=&quot;mobile-only&quot;&gt;&lt;/div&gt;
 &lt;div style=&quot;text-align: center;;&quot;&gt;
 [[Begin]]
 &lt;/div&gt;</tw-passagedata><tw-passagedata pid="2" name="Begin" tags="noProfilesLink" position="600,100" size="100,100">&lt;div class=&quot;scene&quot;&gt;
